--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "errbit",
   "description": "The open source error catcher that's Airbrake API compliant",
   "keywords": ["productivity", "tools", "error tracking"],
-  "repository": "https://github.com/errbit/errbit",
+  "repository": "https://github.com/nickgal/errbit",
   "env": {
     "ERRBIT_ENFORCE_SSL": "true",
     "GEMFILE_RUBY_VERSION": "2.2.4",
